    create the topic.
  * Update look & feel - do not underline links, add fieldset tags.
  * Split the main admin page into Special:Admin and Special:System.
  * Hide the Special:Convert admin page.
  * Add an option to clear the cache from Special:System.
  * Added automatically generated JUnit tests from junitfactory.com.

Translation Updates:

  * Updated Chinese translations (hfl).
  * Updated Polish translations (dlpa).
  * Updated German translations (axelclk).

0.5.1
=====

New Features:

  * Initial spam filter support.
  * Upgrade to Spring 2.0.2.
  * Simplify the process for creating new Wiki "Special:" pages to hopefully
    make it easier for development of custom pages.
  * RSS updates (swift).
  
Bugfixes:

  * Fix infinite redirect problem when installing with BEA WebLogic.
  * Logo image not appearing on sub-pages (such as "Topic/Sub-Topic").
  * Fix problem with images not being properly resized.
  * Fix webAppRootKey error when multiple JAMWiki instances installed on the
    same server (swift).

Translation Updates:

  * Updated Chinese translations (ewen0930).
  * Updated Danish translations (g9adm).
  * Updated Chinese translations (hfl).

0.5.0
=====

New Features:

  * Add ehcache library for caching of parsed topics and images.
  * Integrate the Acegi security framework (swift).
  * Add experimental support for LDAP.
  * Add experimental RSS support (swift).
  * Allow users to select a default locale (swift).
  * Consolidate configuration values into jamwiki-configuration.xml.
  * Add option to use WYSIWYG edit buttons (axelclk).
  * Add Special:Imagelist page to display a list of all images.
  * Add Special:Filelist page to display a list of all non-image files.
  * Experimental Special:Import XML import (gutsul).
  * Add support for the __FORCETOC__ tag.
  * Handle category names case-insensitive, thus "Category:Test" and
    "Category:test" are treated as the same category.
  * Display current date & time on Special:RecentChanges page.